--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@
 	background-color: #ffffff;
 	padding: 80px 0;
 	text-align: center;
+	font-family: Merriweather;
   }
   
   #how-it-works h2 {
@@ -188,6 +189,7 @@
   .steps-list li {
 	flex-basis: 30%;
 	text-align: center;
+	list-style-type: none;
   }
   
   .steps-list img {
@@ -289,3 +291,24 @@
 	height: 100%;
   }
   
+
+  @media screen and (max-width: 768px) {
+	/* Update the font size for headings and paragraphs */
+	h1 {
+	  font-size: 28px;
+	}
+	h2 {
+	  font-size: 24px;
+	}
+	p {
+	  font-size: 14px;
+	}
+  
+	/* Adjust other element sizes if needed */
+  
+	/* Example: Reduce the CTA button size */
+	.cta-button {
+	  font-size: 16px;
+	  padding: 10px 20px;
+	}
+  }
